[project]
name = "bebenang-intel"
version = "0.1.0"
description = "Megu Threads Scrape public Threads dashboard and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "streamlit>=1.37.0",
  "pandas>=2.2.2",
  "python-dotenv>=1.0.1",
  "playwright>=1.49.0",
]

[project.scripts]
bebenang = "threads_intel.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["threads_intel*"]
